[package]
name = "xrust-net"
version = "0.1.0"
keywords = ["xpath", "xslt"]
categories = ["parser-implementations"]
description = "Support for Xrust"
authors = ["Steve Ball <Steve.Ball@explain.com.au>"]
license = "Apache-2.0"
repository = "https://github.com/ballsteve/xrust-net"
documentation = "https://docs.rs/xrust-net/"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
#xrust = "0.8.0"
xrust = {path = "../xrust" }
